第三版补丁

--- a/package.json
+++ b/package.json
@@ -60,6 +60,6 @@
   },
   "apidoc": {
     "title": "Custom apiDoc browser title",
-    "url": "https://39.108.114.59"
+    "url": "http://39.108.114.59"
   }
 }
